update the relatice refs after the absolute refs, fdo#47285

The algoithm for updating absolute refs needs to calculate the old
position based on the information before any updates to the RefData